--- a/8.cover-page.html
+++ b/8.cover-page.html
@@ -81,12 +81,12 @@
         <div class="col"> 
           <div class="jumbotron">
               <h1 id="cover-page-p1" >Internet Programming Course</h1>
-          <h3 id="cover-page-p1" >Teacher:Burcu Yılmazel</h3>
+          <h3 id="cover-page-p1" >Teacher:Burcu Y.</h3>
           <p id="cover-page-p1">Course contains: HTML5 & CSS & JS </p>
             </div>
             <div class="jumbotron">
               <h3 id="cover-page-p1">Student:Osman Yılmaz</h3>
-              <p id="cover-page-p1">Computer Enginerring No:10029155834 </p>
+              <p id="cover-page-p1">Computer Enginerring </p>
             </div>
             <div class="jumbotron">
               <h3 id="cover-page-p1">Due: May 16/2021</h3>
