--- a/aboutme.html
+++ b/aboutme.html
@@ -80,7 +80,7 @@
         <br><br>
         <p>Author Name: Osman Yılmaz</p><br>
         <p>Author Email Adress:cosmanylmz@gmail.com</p><br>
-        <p>Atuhor Telephone Number:+90 5464328398</p><br>
+        <p>Atuhor Telephone Number:</p><br>
         <p>Working Schedule:</p><br><br>
          
         <table class="table table-striped">
